--- a/reset.css
+++ b/reset.css
@@ -20,10 +20,12 @@
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
-  padding: 10px 20px;
+  padding: 10px 0px;
   font-size: 125%;
   font-weight: 300;
-  color: #333;
+  color: #222;
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 html {
@@ -79,14 +81,66 @@ pre {
 }
 
 h1 {
+  font-size: 3rem;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+h2 {
   font-size: 2rem;
   margin-bottom: 10px;
 }
 
-h2 {
+h2:has(a)::before {
+  content: "#";
+  padding-right: 4px;
+}
+
+h2:has(a):hover {
+  color: blue;
+}
+
+h2:not(:has(a)) {
+  text-decoration: underline;
+}
+
+h3 {
   font-size: 1.5rem;
   margin-bottom: 10px;
+}
+
+h3:has(a)::before {
+  content: "#";
+  padding-right: 4px;
+}
+
+h3:has(a):hover {
+  color: blue;
+}
+
+h3:not(:has(a)) {
   text-decoration: underline;
+}
+
+a {
+  color: inherit;
+}
+
+a:hover {
+  color: blue;
+}
+
+external-link {
+  display: inline-block;
+}
+
+external-link::before {
+  content: "🔗";
+  color: blue;
+}
+
+external-link a {
+  color: blue;
 }
 
 p {
